src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/opt-out-twice.stderr
error: expected identifier, found keyword `const`
  --> $DIR/opt-out-twice.rs:6:21
   |
LL | struct S<T: ?const ?const Tr>;
   |                     ^^^^^ expected identifier, found keyword

error: expected one of `(`, `+`, `,`, `::`, `<`, `=`, or `>`, found `Tr`
  --> $DIR/opt-out-twice.rs:6:27
   |
LL | struct S<T: ?const ?const Tr>;
   |                           ^^ expected one of 7 possible tokens

error: aborting due to 2 previous errors

